# vbpca

./: .gitignore  PCA.cabal  README.md  stack.yaml
app/: Main.hs
benchmark/: BenchAll.hs
src/: PCA.hs
src/PCA/: Distribution.hs  QModels.hs
test/: QModels.hs  Spec.hs
