name:                PCA
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/PCA#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PCA
                     , PCA.Distribution
                     , PCA.QModels
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010

executable PCA-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Frames
                     , PCA
                     , base
                     , pipes
                     , text >= 1.2.1.3
  default-language:    Haskell2010

test-suite PCA-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       QModels
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , hmatrix
                     , PCA
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PCA
